Cleaning up some API's